# newsletter-backend

./: Cargo.toml  README.md  deploy.sh
.github/workflows/: ci.yaml
extra/: apigw-payload.json
infra/: package-lock.json  package.json
infra/lib/: newsletter-backend-stack.ts
src/: lib.rs
