[package]
name = "newsletter-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.30.0"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
email_address = "0.2.9"
aws-sdk-sqs = "0.30.0"

[[bin]]
name = "subscribe"
path = "src/bin/subscribe.rs"

[[bin]]
name = "unsubscribe"
path = "src/bin/unsubscribe.rs"

[[bin]]
name = "validate"
path = "src/bin/validate.rs"

[[bin]]
name = "confirm"
path = "src/bin/confirm.rs"
